welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var hauteur:Int= getMondeHauteur();
var T = new Array[Color](hauteur);
def getMotif():Array[Color]=
{
	for (i <- 1 to T.lenght)
	{
		T(i)=getCouleurSol();
		avance();
	} 	 
}
getMotif();
}



